# booknlp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gpu-validation.yml  release.yml
.tmp/code-review/: files.txt  git-delta-commits.md  git-delta-working-tree.md  git-status.txt  report.md
booknlp/: booknlp.py  patches.py
booknlp/api/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware.py  rate_limit.py
booknlp/api/routes/: analyze.py  health.py  jobs.py
booknlp/english/: english_booknlp.py
docker/: DOCKERHUB_README.md
docs/: ASYNC_API.md  GPU_VALIDATION.md  PRODUCTION_DEPLOYMENT.md  TECHNICAL_DEBT.md
scripts/: validate-gpu.sh
tests/: __init__.py  conftest.py
tests/benchmark/: __init__.py  conftest.py  test_performance.py
tests/e2e/: __init__.py  conftest.py  test_analyze_endpoint_e2e.py  test_booknlp_features_e2e.py  test_health_e2e.py  test_job_flow_e2e.py  test_metrics_e2e.py  test_rate_limiting_e2e.py  test_security_e2e.py
tests/fixtures/: sample_text.txt
tests/integration/: test_container.py
tests/load/: README.md  docker-compose.yml  locustfile.py  run_load_test.sh
tests/security/: README.md  run_scan.sh
tests/unit/: test_dockerfile.py  test_dockerfile_gpu.py  test_patches.py  test_requirements.py
(+52 files in other folders)
